# waffle

./: .gitignore  CMakeLists.txt  waffle.sln
include/waffle/: arithmetics.hpp  array.hpp  derived_vector.hpp  intrinsics.hpp
src/: waffle.cpp
waffle/: adjoint.hpp  arithmetics.hpp  array.hpp  integer.hpp  intrinsics.hpp  waffle.cpp  waffle.vcxproj  waffle.vcxproj.filters
